[package]
name = "spl-governance"
version = "0.1.0"
description = "Solana Program Library Governance"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
bincode = "1.3.2"
borsh = "0.8.1"
num-derive = "0.3"
num-traits = "0.2"
serde = "1.0.121"
serde_derive = "1.0.103"
solana-program = { git = "https://github.com/solana-labs/solana" }
spl-token = { path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = { git = "https://github.com/solana-labs/solana" }
solana-sdk = { git = "https://github.com/solana-labs/solana" }

[lib]
crate-type = ["cdylib", "lib"]
