[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
description = "SPL-Stake-Pool Command-line Utility"
edition = "2018"
homepage = "https://spl.solana.com/stake-pool"
license = "Apache-2.0"
name = "spl-stake-pool-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.2.0"

[dependencies]
borsh = "0.8"
clap = "2.33.3"
serde_json = "1.0.62"
solana-account-decoder = { git = "https://github.com/solana-labs/solana" }
solana-clap-utils = { git = "https://github.com/solana-labs/solana" }
solana-cli-config = { git = "https://github.com/solana-labs/solana" }
solana-client = { git = "https://github.com/solana-labs/solana" }
solana-logger = { git = "https://github.com/solana-labs/solana" }
solana-sdk = { git = "https://github.com/solana-labs/solana" }
solana-program = { git = "https://github.com/solana-labs/solana" }
spl-associated-token-account = { version = "1.0", path="../../associated-token-account/program", features = [ "no-entrypoint" ] }
spl-stake-pool = { version = "0.2", path="../program", features = [ "no-entrypoint" ] }
spl-token = { version = "3.1", path="../../token/program", features = [ "no-entrypoint" ]  }
bs58 = "0.4.0"
bincode = "1.3.1"
lazy_static = "1.4.0"

[[bin]]
name = "spl-stake-pool"
path = "src/main.rs"
