[package]
name = "spl-stake-pool"
version = "0.2.0"
description = "Solana Program Library Stake Pool"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
borsh = "0.8"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"
serde = "1.0.121"
serde_derive = "1.0.103"
solana-program = { git = "https://github.com/solana-labs/solana" }
spl-math = { version = "0.1", path = "../../libraries/math", features = [ "no-entrypoint" ] }
spl-token = { version = "3.1", path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"
bincode = "1.3.1"

[dev-dependencies]
proptest = "0.10"
solana-program-test = { git = "https://github.com/solana-labs/solana" }
solana-sdk = { git = "https://github.com/solana-labs/solana" }
solana-vote-program = { git = "https://github.com/solana-labs/solana" }

[lib]
crate-type = ["cdylib", "lib"]
