[package]
name = "spl-token-lending"
version = "0.1.0"
description = "Solana Program Library Token Lending"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []
test-dump-genesis-accounts = []

[dependencies]
arrayref = "0.3.6"
flux-aggregator = { git = "https://github.com/octopus-network/solana-flux-aggregator", rev = "9cfaec5", features = ["no-entrypoint"] }
num-derive = "0.3"
num-traits = "0.2"
solana-program = { git = "https://github.com/solana-labs/solana" }
spl-token = { path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"
uint = "0.8"

[dev-dependencies]
assert_matches = "1.5.0"
base64 = "0.13"
log = "0.4.14"
proptest = "0.10"
solana-program-test = { git = "https://github.com/solana-labs/solana" }
solana-sdk = { git = "https://github.com/solana-labs/solana" }
serde = "1.0"
serde_yaml = "0.8"

[lib]
crate-type = ["cdylib", "lib"]
