[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
description = "SPL-Token Command-line Utility"
edition = "2018"
homepage = "https://spl.solana.com/token"
license = "Apache-2.0"
name = "spl-token-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "2.0.11"

[dependencies]
clap = "2.33.3"
cc = "=1.0.67"
console = "0.14.0"
ring = "=0.16.17"
serde_json = "1.0.62"
solana-account-decoder = { git = "https://github.com/solana-labs/solana" }
solana-crate-features = { git = "https://github.com/solana-labs/solana" }
solana-clap-utils = { git = "https://github.com/solana-labs/solana" }
solana-cli-config = "=1.6.9"
solana-cli-output = { git = "https://github.com/solana-labs/solana" }
solana-client = { git = "https://github.com/solana-labs/solana" }
solana-logger = "=1.6.9"
solana-remote-wallet = { git = "https://github.com/solana-labs/solana" }
solana-sdk = { git = "https://github.com/solana-labs/solana" }
spl-token = { version = "3.1", path="../program", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "1.0", path="../../associated-token-account/program", features = [ "no-entrypoint" ] }
spl-memo = { version = "3.0.1", path="../../memo/program", features = ["no-entrypoint"] }

[[bin]]
name = "spl-token"
path = "src/main.rs"
