[package]
name = "spl-token"
version = "3.1.1"
description = "Solana Program Library Token"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"
solana-program = { git = "https://github.com/solana-labs/solana" }
thiserror = "1.0"

[dev-dependencies]
solana-sdk = { git = "https://github.com/solana-labs/solana" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
